load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: dev-bsai
  name: voxelbox
spec:
  loadBalancerIP: 20.204.13.137
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: voxelbox
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: dev-bsai
  name: voxelbox-plus
spec:
  loadBalancerIP: 20.204.65.113
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: voxelbox-plus
