voxelbox-deployment.yaml
#apiVersion: v1
#kind: Namespace
#metadata:
#  name: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voxelbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voxelbox
  template:
    metadata:
      labels:
        app: voxelbox
#        namespace: backend
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: voxelbox
        image: devbsai.azurecr.io/voxelbox:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: azure
          mountPath: /training
        resources:
          requests:
            cpu: 800m
            memory: 1700Mi
          limits:
            cpu: 1000m
            memory: 1800Mi
        ports:
        - containerPort: 80
          name: voxelbox
      volumes:
      - name: azure
        azureFile:
          secretName: azure-secret1
          shareName: training
          readOnly: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voxelboxplus
spec:
  replicas: 0
  selector:
    matchLabels:
      app: voxelbox-plus
  template:
    metadata:
      labels:
        app: voxelbox-plus
#        namespace: backend
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: voxelbox-plus
        image: devbsai.azurecr.io/voxelboxplusgliomaecm:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: azure
          mountPath: /training
        resources:
          requests:
            cpu: 500m
            memory: 800Mi
          limits:
            cpu: 600m
            memory: 1400Mi
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: azure
          mountPath: /training
      volumes:
      - name: azure
        azureFile:
          secretName: azure-secret1
          shareName: training
          readOnly: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fileprocessing
spec:
  replicas: 0
  selector:
    matchLabels:
      app: fileprocessing
  template:
    metadata:
      labels:
        app: fileprocessing
#        namespace: backend
    spec:
      nodeSelector:
        hardware: highmem
      containers:
      - name: fileprocessing
        image: devbsai.azurecr.io/file_processsing:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: azure
          mountPath: /training
        resources:
          requests:
#            cpu: 700m
#            memory: 4500Mi
            cpu: 700m
            memory: 4500Mi
          limits:
            cpu: 800m
            memory: 5000Mi
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: azure
          mountPath: /training
      volumes:
      - name: azure
        azureFile:
          secretName: azure-secret1
          shareName: training
          readOnly: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voxelbox-smri
spec:
  replicas: 0
  selector:
    matchLabels:
      app: voxelbox-smri
  template:
    metadata:
      labels:
        app: voxelbox-smri
#        namespace: backend
    spec:
      nodeSelector:
        hardware: highmem
      containers:
      - name: voxelbox-smri
        image: devbsai.azurecr.io/voxelbox_smri_cloud:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: azure
          mountPath: /training
        resources:
          requests:
            cpu: 7000m
            memory: 4300Mi
#            cpu: 70m
#            memory: 40Mi
          limits:
            cpu: 8000m
            memory: 9000Mi
        ports:
        - containerPort: 5001
        volumeMounts:
        - name: azure
          mountPath: /training
      volumes:
      - name: azure
        azureFile:
          secretName: azure-secret1
          shareName: training
          readOnly: false
---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: flask
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: flask
#  template:
#    metadata:
#      labels:
#        app: flask
#    spec:
#      nodeSelector:
#        "kubernetes.io/os": linux
#      containers:
#      - name: flask
#        image: devbsai.azurecr.io/flask:v0.1
#        volumeMounts:
#        - name: azure
#          mountPath: /training
#        resources:
#          requests:
#            cpu: 100m
#            memory: 400Mi
#          limits:
#            cpu: 200m
#            memory: 500Mi
#        ports:
#        - containerPort: 5000
#        volumeMounts:
#        - name: azure
#          mountPath: /training
#      volumes:
#      - name: azure
#        azureFile:
#          secretName: azure-secret
#          shareName: training
#          readOnly: false
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: flask
#spec:
#  type: LoadBalancer
#  ports:
#  - port: 80
#  selector:
#    app: flask
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: dev-bsai
  name: voxelbox
#  namespace: backend 
spec:
  loadBalancerIP: 20.204.13.137
  type: LoadBalancer
  ports:
  - port: 5000
  selector:
    app: voxelbox
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: dev-bsai
  name: voxelbox-plus
#  namespace: backend
spec:
  loadBalancerIP: 20.204.65.113
  type: LoadBalancer
  ports:
  - port: 9000
  selector:
    app: voxelbox-plus
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: dev-bsai
  name: fileprocessing
#  namespace: backend
spec:
  loadBalancerIP: 20.193.245.2
  type: LoadBalancer
  ports:
  - port: 3000
  selector:
    app: fileprocessing
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: dev-bsai
  name: voxelbox-smri
#  namespace: backend
spec:
  loadBalancerIP: 20.204.12.86
  type: LoadBalancer
  ports:
  - port: 5001
  selector:
    app: voxelbox-smri
