voxelbox-deploymeny.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voxelbox
spec:
  replicas: 0 
  selector:
    matchLabels:
      app: voxelbox
  template:
    metadata:
      labels:
        app: voxelbox
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: voxelbox
        image: devbsai.azurecr.io/voxelbox:latest
        volumeMounts:
        - name: azure
          mountPath: /training
        resources:
          requests:
            cpu: 1500m
            memory: 1200Mi
          limits:
            cpu: 1600m
            memory: 1500Mi
        ports:
        - containerPort: 80
          name: voxelbox
      volumes:
      - name: azure
        azureFile:
          secretName: azure-secret1
          shareName: training
          readOnly: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voxelboxplus
spec:
  replicas: 4
  selector:
    matchLabels:
      app: voxelbox-plus
  template:
    metadata:
      labels:
        app: voxelbox-plus
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: voxelbox-plus
        image: devbsai.azurecr.io/voxelboxplusgliomaecm:latest
        volumeMounts:
        - name: azure
          mountPath: /training
        resources:
          requests:
            cpu: 500m
            memory: 800Mi
          limits:
            cpu: 600m
            memory: 1400Mi
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: azure
          mountPath: /training
      volumes:
      - name: azure
        azureFile:
          secretName: azure-secret1
          shareName: training
          readOnly: false
---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: flask
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: flask
#  template:
#    metadata:
#      labels:
#        app: flask
#    spec:
#      nodeSelector:
#        "kubernetes.io/os": linux
#      containers:
#      - name: flask
#        image: devbsai.azurecr.io/flask:v0.1
#        volumeMounts:
#        - name: azure
#          mountPath: /training
#        resources:
#          requests:
#            cpu: 100m
#            memory: 400Mi
#          limits:
#            cpu: 200m
#            memory: 500Mi
#        ports:
#        - containerPort: 5000
#        volumeMounts:
#        - name: azure
#          mountPath: /training
#      volumes:
#      - name: azure
#        azureFile:
#          secretName: azure-secret
#          shareName: training
#          readOnly: false
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: voxelbox
#  annotations:
#    service.beta.kubernetes.io/azure-dns-label-name: voxelbox-lb
#spec:
#  loadBalancerIP: 20.204.13.137
#  type: LoadBalancer
#  ports:
#  - port: 5000
#  selector:
#    app: voxelbox
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: voxelbox-plus        
#  annotations:
#    service.beta.kubernetes.io/azure-dns-label-name: voxelboxplus-lb
#spec:
#  type: LoadBalancer
#  loadBalancerIP: 20.204.65.113
#  ports:
#  - port: 5000
#  selector:
#    app: voxelbox-plus
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: flask
#spec:
#  type: LoadBalancer
#  ports:
#  - port: 80
#  selector:
#    app: flask
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: dev-bsai
  name: voxelbox
spec:
  loadBalancerIP: 20.204.13.137
  type: LoadBalancer
  ports:
  - port: 8000
  selector:
    app: voxelbox
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: dev-bsai
  name: voxelbox-plus
spec:
  loadBalancerIP: 20.204.65.113
  type: LoadBalancer
  ports:
  - port: 9000
  selector:
    app: voxelbox-plus
